2006-02-07  Marc Singer  <elf@buici.com>

	* src/mach-lh7a40x/cmd-cp15test.c: Added a cp15 test register
	manipulation function.

2006-02-06  Marc Singer  <elf@buici.com>

	* lh7a404_config: Setting default memory mode to SROM_LL.

2006-01-20  Marc Singer  <elf@buici.com>

	* src/lib/pngr.c (read_pngr_plte): When found, a palette is read
	from the PNG file and stored for the decoder.

	* src/drivers-lh/drv-clcdc.c (cmd_splash): Added support for
	palettized images, but only at 8 bits per pel.  Other pel sizes
	require unpacking of the image data.

2006-01-13  Marc Singer  <elf@buici.com>

	* src/mach-ixp42x/openslug_config: Openslug 3.1 no longer puts the
	kernel in the jffs2 partition.  We default to reading the kernel
	from flash.
 
	* src/arch-arm/entry/mmu.c (mmu_release): In order to support
	XScale MMU (and caches) we need to customize the MMU disabling
	code to cope with a different method of cleaning the data cache.
	This is done for the sake of faster loading of a JFFS2 filesystem
	image.  The kernel is stored in a JFFS2 filesystem in flash for
	compactness.  The faster we can read this data, the better.  Also,
	reads from flash of ramdisk images benefits from caching.
  
2005-12-27  Marc Singer  <elf@buici.com>

	* src/arch-arm/lib/relocate.c (relocate_apex): Improved the scarce
	register version of the system copy routine.  It's now using the
	same form as the fastest version.

	* src/mach-lh7a40x/cmd-reset.c (cmd_reset): Added reset command
	for the lh7a40x targets.  It used the watchdog timer to perform
	the system reset.

	* src/arch-arm/entry/entry.c (setup_c): Added code for clearing
	stacks to a known value.

	* src/mach-lh7952x/exception_vectors.c: The exception handling
	code works.  APEX can use interrupts.

	* src/arch-arm/lib/relocate.c (relocate_apex) :recoded
	relocation test to reduce the number of registers and to update
	the syntax for __asm constraints.  This code was substantially
	modified to reflect some minor optimizations.
